syntax = "proto3";
option java_multiple_files = true;
option java_package = "br.com.ufu.javaServer";
package br.com.ufu.javaServer;

message InsertRequest {
    string content = 1;
}

message InsertResponse {
    string response = 1;
}

message SelectRequest {
    int32 id = 1;
}

message SelectResponse {
    string response = 1;
}

message UpdateRequest {
	int32 id = 1;
    string content = 2;
}

message UpdateResponse {
    string response = 1;
}

message DeleteRequest {
    int32 id = 1;
}

message DeleteResponse {
    string response = 1;
}

service ReceptionService {
    rpc insert(InsertRequest) returns (InsertResponse);
    
    rpc select(SelectRequest) returns (SelectResponse);
    
    rpc update(UpdateRequest) returns (UpdateResponse);
    
    rpc delete(DeleteRequest) returns (DeleteResponse);    
}